<resources>
    <string name="app_name">XF\'sSerialRecorder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="serial">Serial</string>
    <string name="rx">RX:</string>
    <string name="rx_template">RX:%dB</string>
    <string name="device_not_connect">Device not connect</string>
    <string name="open_device_failed">Open device failed</string>
    <string name="error_opening_device">Error opening device: %s</string>
    <string name="runner_stopped">Runner stopped</string>
    <string name="device_unplugged">Device unplugged</string>
    <string name="create_record_dir_fail">Create record dir failed</string>

    <!-- Strings related to Settings -->

    <!-- Serial settings -->
    <string name="pref_header_serial">Serial</string>

    <string name="pref_title_baudrate">Baudrate</string>
    <string name="pref_default_baudrate">1500000</string>
    <string name="pref_key_baudrate">pref_key_baudrate</string>

    <string name="pref_title_parity">Parity</string>
    <string-array name="pref_parity_list_titles">
        <item>None</item>
        <item>Odd</item>
        <item>Even</item>
    </string-array>
    <string-array name="pref_parity_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_key_parity">pref_key_parity</string>

    <string name="pref_title_stopbit">Stop bit</string>
    <string-array name="pref_stopbit_list_titles">
        <item>1bit</item>
        <item>2bit</item>
    </string-array>
    <string-array name="pref_stopbit_list_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_key_stopbit">pref_key_stopbit</string>

    <string name="pref_title_databit">Data bit</string>
    <string-array name="pref_databit_list_titles">
        <item>5bit</item>
        <item>6bit</item>
        <item>7bit</item>
        <item>8bit</item>
    </string-array>
    <string-array name="pref_databit_list_values">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="pref_key_databit">pref_key_databit</string>

    <!-- File settings -->
    <string name="pref_header_file">File</string>

    <string name="pref_title_record_to_file">Record to file</string>
    <string name="pref_description_record_to_file">Save received data to file</string>
    <string name="pref_key_record_to_file">pref_key_record_to_file</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
