<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_baudrate"
        android:inputType="numberDecimal"
        android:numeric="integer"
        android:key="@string/pref_key_baudrate"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_baudrate" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="8"
        android:entries="@array/pref_databit_list_titles"
        android:entryValues="@array/pref_databit_list_values"
        android:key="@string/pref_key_databit"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_databit" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_parity_list_titles"
        android:entryValues="@array/pref_parity_list_values"
        android:key="@string/pref_key_parity"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_parity" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_stopbit_list_titles"
        android:entryValues="@array/pref_stopbit_list_values"
        android:key="@string/pref_key_stopbit"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_stopbit" />

</PreferenceScreen>
